# dd-creator

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  app.py  pyproject.toml
src/core/: captioning.py  export.py  inpainting.py  sam_segmenter.py  segmentation.py  smart_crop.py  state.py  upscaling.py
src/core/birefnet_impl/: birefnet.py  preprocessor_config.json
src/ui/: dashboard.py  wizard.py
